RangeSelector layout, fixed plot area overlap

--- a/samples/stock/rangeselector/dropdown/demo.css
+++ b/samples/stock/rangeselector/dropdown/demo.css
@@ -4,8 +4,6 @@
 }
 
 #container {
-    width: 400px;
-    height: 400px;
     margin: 0 auto;
 }
 
